--- a/src/assets/style/MainPhrase.module.scss
+++ b/src/assets/style/MainPhrase.module.scss
@@ -1,5 +1,6 @@
 .wrapper{
-    width: 70vw;
+    position: relative;
+    width: 550px;
     background-color: #e8e8e8;
     display: flex;
     margin: 0 auto;
