--- a/src/assets/style/Comment.module.scss
+++ b/src/assets/style/Comment.module.scss
@@ -1,10 +1,9 @@
 .container{
-    margin-top: 5vh;
     .input{
         outline:none;
         border:3px solid #e8e8e8;
-        height: 10vh;
-        width: 63vw;
+        height: 70px;
+        width: 870px;
         resize: none;
         font-weight: 400;
         font-size: 12pt;
