--- a/src/assets/style/Header.module.scss
+++ b/src/assets/style/Header.module.scss
@@ -1,11 +1,21 @@
 .wrapper{
+    margin-top: 20px;
     width: 100%;
-    height: 20vh;
     display: inline-flex;
-    left: 0;
-    align-items: center;
-    align-content: center; 
-    .Button{
+    .Checker{
         padding-left: 5%;
+    }
+    .ChannelList{
+        border: 2px solid #e8e8e8;
+        width: 180px;
+        font-size: 16px;
+        outline: none;
+
+    }
+    .ChannelTitle{
+        display:inline-block;
+        font-size: 18px;
+        font-weight: 400;
+        width: 60px;
     }
 }
